test_cases/negative/compiler/services_not_service.snek
export DEFAULT = Image("...")
    > WithService(Image("..."), "...");
